2008-03-05  Vincent Torri  <doursse at users dot sf dot net>

	fix compilation with cegcc and minor fixing

	* COPYING:
	copyright update

	* configure.ac:
	* src/lib/Evil.h:
	* src/lib/dlfcn/dlfcn.h:
	* src/lib/mman/sys/mman.h:
	define EFL_EVIL_BUILD in config.h for managing correctly EAPI

	* src/bin/test_pipe.c:
	stdio.h is needed after winsock2.h for mingw32ce

	* src/lib/dlfcn/dlfcn.c (get_last_error), (dlopen), (dlsym):
	* src/lib/evil.c:
	fix some heafer files inclusion on cegc platform.
	first step of mingw32ce support

	* src/lib/mman/mman.c:
	define _get_osfhandle for mingw32ce

2008-03-03  Vincent Torri  <doursse at users dot sf dot net>

	* COPYING:
	* COPYING-PLAIN:
	* Makefile.am:
	update the COPYING file

2008-02-29  Vincent Torri  <doursse at users dot sf dot net>

	* AUTHORS:
	Add Tor Lillqvist as author as he kindly gave me
	the right to use his code for pipe(). Thanks a lot !

	* src/bin/test_dlfcn.c (main):
	read module and symbol from command line

	* src/bin/test_pipe.c (thread), (main):
	change output

	* src/lib/Evil.h:
	* src/lib/dlfcn/dlfcn.h:
	* src/lib/evil.c (mkstemp), (realpath), (evil_sockets_init),
	(evil_sockets_shutdown):
	* src/lib/mman/sys/mman.h:
	update documentation, add unlink() function, realpath()
	becomes a function instead of a macro, add functions to
	init / shutdown the socket system of Windows, undef EAPI
	at the end of each header files.

2008-02-27 Vincent Torri  <doursse at users dot sf dot net>

	* initial release